--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
       run: npm install -g vercel@35.1.0
 
     - name: Deploy to Vercel
-      run: vercel --prod -t ${{ secrets.VERCEL_TOKEN }} --confirm
+      run: vercel --prod -t ${{ secrets.VERCEL_SECRET }} --confirm
