--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "node server/app.js"
+    "server": "nodemon server/app.js"
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.9",
@@ -27,7 +27,8 @@
     "dotenv": "^16.4.5",
     "cors": "^2.8.5",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
